# Nutrixious

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp
asset/: AndroidManifest.xml.in  CMakeLists.txt
asset/android/: AndroidManifest.xml
doc/: Structure.md
metadata/en-US/: full_description.txt  short_description.txt  title.txt
metadata/en-US/changelogs/: 1.txt
src/: CMakeLists.txt
src/activity/base/exercise/: ExerciseListModel.cpp  ExerciseListModel.h  ExerciseModel.cpp  ExerciseModel.h  ExerciseProxyModel.cpp  ExerciseProxyModel.h
src/activity/base/serie/: SerieListModel.h  SerieModel.cpp  SerieModel.h
src/activity/description/exercise/: ExerciseListModel.cpp  ExerciseListModel.h  ExerciseModel.cpp  ExerciseModel.h  ExerciseProxyModel.cpp  ExerciseProxyModel.h
src/activity/description/program/: ProgramListModel.cpp  ProgramListModel.h  ProgramModel.cpp  ProgramModel.h  ProgramProxyModel.cpp  ProgramProxyModel.h
src/activity/description/sport/: DistanceModel.cpp  DistanceModel.h  StepsModel.cpp  StepsModel.h  StrengthModel.cpp  StrengthModel.h  StrengthWorkModel.cpp  StrengthWorkModel.h
src/activity/program/: ProgramListModel.h  ProgramModel.cpp  ProgramModel.h  ProgramProxyModel.h
src/activity/program/exercise/: ExerciseModel.cpp  ExerciseModel.h
src/activity/program/serie/: SerieListModel.cpp  (+4 more)
src/activity/training/: TrainingModel.cpp  TrainingModel.h
src/activity/working/: WorkingExerciseModel.cpp  WorkingExerciseModel.h  WorkingModel.cpp  WorkingModel.h  WorkingSerieModel.cpp  WorkingSerieModel.h
src/computation/: Computation.cpp  Computation.h
src/database/: DatabaseModel.cpp  DatabaseModel.h  DatabaseQuery.cpp  DatabaseQuery.h
src/database/exercise/: ExerciseListModel.cpp  ExerciseListModel.h  ExerciseModel.cpp  ExerciseModel.h  ExerciseProxyModel.cpp  ExerciseProxyModel.h
src/database/exerciseSerie/: ExerciseSerieListModel.cpp  ExerciseSerieListModel.h  ExerciseSerieModel.cpp  ExerciseSerieModel.h  ExerciseSerieProxyModel.cpp  ExerciseSerieProxyModel.h
src/database/exerciseUnit/: ExerciseUnitListModel.cpp  ExerciseUnitListModel.h  ExerciseUnitModel.cpp  ExerciseUnitModel.h  ExerciseUnitProxyModel.cpp  ExerciseUnitProxyModel.h
src/database/food/: FoodListModel.cpp  FoodListModel.h  FoodModel.cpp  FoodModel.h  FoodProxyModel.cpp  FoodProxyModel.h
src/database/meal/: MealListModel.cpp  MealListModel.h  MealModel.cpp  MealModel.h  MealProxyModel.cpp
src/database/mealFood/: MealFoodListModel.cpp  MealFoodListModel.h  MealFoodModel.cpp  MealFoodModel.h  MealFoodProxyModel.cpp  MealFoodProxyModel.h
src/database/mealGroup/: MealGroupListModel.cpp  MealGroupListModel.h  MealGroupModel.cpp  MealGroupModel.h  MealGroupProxyModel.cpp  MealGroupProxyModel.h
src/database/personal/: PersonalDataListModel.cpp  PersonalDataListModel.h  PersonalDataModel.cpp  PersonalDataModel.h  PersonalDataProxyModel.cpp  PersonalDataProxyModel.h
src/database/program/: ProgramListModel.cpp  ProgramListModel.h  ProgramModel.cpp  ProgramModel.h  ProgramProxyModel.cpp  ProgramProxyModel.h
src/database/recipe/: RecipeListModel.cpp  RecipeListModel.h  RecipeModel.cpp  RecipeModel.h  RecipeProxyModel.cpp  RecipeProxyModel.h
src/database/recipeIngredient/: RecipeIngredientListModel.cpp  RecipeIngredientListModel.h  RecipeIngredientModel.cpp  RecipeIngredientModel.h  RecipeIngredientProxyModel.cpp  RecipeIngredientProxyModel.h
src/database/training/: TrainingListModel.cpp  TrainingListModel.h  TrainingModel.cpp  TrainingModel.h  TrainingProxyModel.cpp  TrainingProxyModel.h
src/database/unit/: UnitListModel.cpp  UnitListModel.h  UnitModel.cpp  UnitModel.h  UnitProxyModel.cpp  UnitProxyModel.h
src/feature/: Scanner.cpp  Scanner.h
src/food/: FoodModel.cpp  FoodModel.h
src/setting/: SettingsModel.cpp  SettingsModel.h
src/stat/: StatsModel.cpp  StatsModel.h
src/tool/: QmlData.cpp  QmlData.h  QmlModel.cpp  QmlModel.h  Utils.cpp  Utils.h
src/tool/date/: ChangeDayTimer.cpp  ChangeDayTimer.h  DateModel.cpp  DateModel.h
src/tool/logger/: Logger.cpp  Logger.h
src/tool/mouseArea/: MouseArea.cpp  MouseArea.h
src/tool/provider/: ImageProvider.cpp  ImageProvider.hpp
src/tool/proxyModel/: ObjectListModel.cpp  ObjectListModel.h  ObjectProxyModel.cpp  ObjectProxyModel.h  ProxyAbstractListModel.hpp  ProxyAbstractMapModel.hpp  ProxyAbstractObject.hpp  ProxyModel.cpp  ProxyModel.hpp  SharedProxyListModel.cpp  SharedProxyListModel.hpp  SortFilterAbstractProxyModel.hpp  SortFilterProxyModel.cpp  SortFilterProxyModel.hpp
ui/: CMakeLists.txt  Main.qml
ui/Item/: Button.qml  ButtonImage.qml  DatePicker.qml  DayNavigationBar.qml  Dialog.qml  EffectImage.qml  MouseArea.qml  ScannerOverlay.qml  SerieFieldPicker.qml  SexBox.qml  Stopwatch.qml  TextField.qml  TimeDisplay.qml  ToolBar.qml  ToolButtonImage.qml
ui/Item/Chart/: TimeChart.qml
ui/Item/TimePicker/: TimePicker.qml  TimePickerDialog.qml  TimePickerLabel.qml
ui/Layout/: DiaryLayout.qml  ExercisesLayout.qml  SwipeLayout.qml
ui/Page/: AboutPage.qml  ActivitiesPage.qml  DiaryPage.qml  FoodPage.qml  NutritionPage.qml  OverviewPage.qml  PersonalDataPage.qml  ScannerPage.qml  SettingsPage.qml  StatisticsPage.qml
ui/Page/Activity/: DistancePage.qml  ExerciseEditorPage.qml  ExerciseUnitEditorPage.qml  ExercisesPage.qml  LivePage.qml  ProgramEditorPage.qml  ProgramsPage.qml  StepsPage.qml  StrengthPage.qml  TrainingPage.qml  TrainingsPage.qml
ui/Page/History/: ExerciseStatsPage.qml  NutritionStatsPage.qml  PersonalDataPage.qml  TrainingsPage.qml
ui/Page/Nutrition/: FoodEditorPage.qml  FoodsPage.qml  MealGroupsPage.qml  RecipeEditorPage.qml
ui/Style/: DefaultStyle.qml
ui/Tool/: ColorPicker.qml  DragDropTool.qml  Utils.js
ui/View/: DistanceModelView.qml  ExerciseModelView.qml  ExerciseSerieModelListView.qml  ExerciseSerieModelView.qml  ExerciseSetModelListView.qml  ExerciseSetModelView.qml  FoodLineView.qml  FoodModelView.qml  FoodSearchView.qml  MealGroupView.qml  MealView.qml  ScannerView.qml  StepsModelView.qml  StrengthModelView.qml  TrainModelView.qml  TrainingExerciseModelView.qml
(+34 files in other folders)
